--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start_production": "node ./bin/www && cd client && npm run build",
     "client": "cd client && yarn start",
     "server": "nodemon ./bin/www",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
