--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "~1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
+    "csv": "^2.0.0",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
