--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "fuse-js-latest": "^3.1.0",
     "google-map-react": "^0.29.0",
     "react": "^16.2.0",
