--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "node-cron": "^1.2.1",
     "react-metrics": "^2.4.0",
     "request": "^2.83.0",
     "serve-favicon": "~2.4.5"
