--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "google-map-react": "^0.29.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-ga": "^2.4.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
