--- a/package.json
+++ b/package.json
@@ -1,33 +1,24 @@
 {
-  "name": "zachloza",
-  "version": "0.0.0",
+  "name": "client",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "start_production": "node ./bin/www && cd client && npm run build",
-    "client": "cd client && yarn start",
-    "server": "nodemon ./bin/www",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
-  },
   "dependencies": {
-    "@google/maps": "^0.4.5",
-    "async": "^2.6.0",
-    "body-parser": "~1.18.2",
-    "cheerio": "^1.0.0-rc.2",
-    "cookie-parser": "~1.4.3",
-    "csv": "^2.0.0",
-    "debug": "~2.6.9",
-    "express": "~4.15.5",
-    "express-session": "^1.15.6",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.0",
-    "mysql": "^2.15.0",
-    "node-cron": "^1.2.1",
-    "react-metrics": "^2.4.0",
-    "request": "^2.83.0",
-    "serve-favicon": "~2.4.5"
+    "axios": "^0.18.0",
+    "fuse-js-latest": "^3.1.0",
+    "google-map-react": "^0.29.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-ga": "^2.4.1",
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
-  "devDependencies": {
-    "concurrently": "^3.5.1"
+  "scripts": {
+    "start": "react-scripts start",
+    "start:production": "npm run build",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
