--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.2.0",
     "react-ga": "^2.4.1",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.0",
+    "react-scripts": "^1.1.5",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
