Updated to create-react-app 2 and overhauled UI

--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "client",
+  "name": "19hz-map2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.4",
-    "@fortawesome/free-solid-svg-icons": "^5.3.1",
-    "@fortawesome/react-fontawesome": "^0.1.2",
-    "axios": "^0.18.0",
+    "google-map-react": "^1.0.9",
+    "prop-types": "^15.6.2",
     "fuse-js-latest": "^3.1.0",
-    "google-map-react": "^0.29.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-ga": "^2.4.1",
-    "react-redux": "^5.0.7",
-    "react-scripts": "^1.1.5",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-ga": "^2.5.3",
+    "react-scripts": "2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:production": "npm run build",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "watch-css": "node-sass --watch src/scss -o public"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
