--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -11,10 +11,8 @@
 
 # misc
 .DS_Store
-.env
 .env.local
 .env.development.local
-.env.development
 .env.test.local
 .env.production.local
 
